--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-dev-server",
-    "build-prod":"webpack -p"
+    "build-prod": "webpack -p"
   },
   "keywords": [
     "\\"
@@ -16,10 +16,12 @@
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.14.1",
+    "rangeslider-js": "^3.2.5",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
